router-bridge/src/snapshots/router_bridge__planner__tests__anonymous_query_works.snap
---
source: router-bridge/src/planner.rs
expression: "serde_json::to_string_pretty(&payload.data).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Fetch",
      "serviceName": "accounts",
      "variableUsages": [],
      "operation": "{me{name{first last}}}",
      "operationKind": "query"
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Fetch(service: \"accounts\") {\n    {\n      me {\n        name {\n          first\n          last\n        }\n      }\n    }\n  },\n}",
  "evaluatedPlanCount": 1
}
