router-bridge/src/snapshots/router_bridge__planner__tests__named_query_with_several_choices_works-2.snap
---
source: router-bridge/src/planner.rs
expression: payload.usage_reporting
---
{
  "statsReportKey": "# MyFirstName\nquery MyFirstName{me{name{first}}}",
  "referencedFieldsByType": {
    "Name": {
      "fieldNames": [
        "first"
      ],
      "isInterface": false
    },
    "Query": {
      "fieldNames": [
        "me"
      ],
      "isInterface": false
    },
    "User": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
