router-bridge/src/snapshots/router_bridge__planner__tests__progressive_override.snap
---
source: router-bridge/src/planner.rs
assertion_line: 825
expression: "serde_json::to_string_pretty(&payload1.data).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Fetch",
      "serviceName": "Subgraph1",
      "variableUsages": [],
      "operation": "{t{a}}",
      "operationKind": "query"
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Fetch(service: \"Subgraph1\") {\n    {\n      t {\n        a\n      }\n    }\n  },\n}"
}
